# enumorph

./: .gitignore  Cargo.toml  README.md  flake.nix
derive/: Cargo.toml
derive/src/: lib.rs
src/: lib.rs  test.rs
tests/ui/compile_fail/: multiple_named_fields.rs  multiple_named_fields.stderr  multiple_named_fields_generic.rs  multiple_named_fields_generic.stderr  multiple_unnamed_fields.rs  multiple_unnamed_fields.stderr  multiple_unnamed_fields_generic.rs  multiple_unnamed_fields_generic.stderr  same_inner_type.rs  same_inner_type.stderr
tests/ui/pass/: complex_generics.rs  ignore.rs  single_unnamed_variant.rs
