[package]
name = "enumorph"
version = "0.1.0"
edition = "2021"
description = "Derive macro to generate `TryFrom` and `From` implementations for converting between newtype enum variants and their wrapped values"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["extra-traits"] }

[dev-dependencies]
trybuild = "1.0.85"
